--- a/angular/site-perso-corentin/package.json
+++ b/angular/site-perso-corentin/package.json
@@ -24,11 +24,13 @@
     "@angular/router": "^6.0.3",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "angular-font-awesome": "^3.1.2",
+    "angular-svg-icon": "^6.0.0",
     "bootstrap": "^4.1.1",
     "browser-detect": "^0.2.28",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "rxjs": "^6.0.0",
+    "tslib": "^1.9.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
