brme: encode password at user creation

--- a/booking-room-me/brme-api/.env.dist
+++ b/booking-room-me/brme-api/.env.dist
@@ -23,5 +23,5 @@ DATABASE_URL=mysql://Coco:0386479877@localhost/br_me_api
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=b8fe8438de69b5fc8406a92b1b59f415
+JWT_PASSPHRASE=brme
 ###< lexik/jwt-authentication-bundle ###
