brme: admin settings

--- a/booking-room-me/brme-api/config/services.yaml
+++ b/booking-room-me/brme-api/config/services.yaml
@@ -45,3 +45,5 @@ services:
         class: App\EventListener\AuthenticationFailureListener
         tags:
         - { name: kernel.event_listener, event: lexik_jwt_authentication.on_authentication_failure, method: onAuthenticationFailureResponse }
+
+    'App\Filter\RegexpFilter':
